fixed whitespace - update

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,16 @@
     padding: 0;
 }
 
+html,
+body {
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
     font-family: Roboto;
     background-color: #f9f9f9;
 }
@@ -46,7 +52,6 @@ nav.scroll #main-nav li a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    /*    width: 100%;*/
     top: 10px;
 }
 
@@ -95,11 +100,12 @@ nav.scroll #main-nav li a:hover {
     right: 0;
     bottom: 0;
     left: 0;
-    width: 100%;
+    /*    width: 100%;*/
     height: 100%;
 }
 
 .content-container {
+    width: 100%;
     opacity: 0.9;
     text-align: center;
     margin-top: 20%;
@@ -491,6 +497,7 @@ hr {
 }
 
 #contact {
+    width: 100%;
     background-color: white;
     text-align: center;
 }
@@ -498,6 +505,10 @@ hr {
 #contact-form {
     padding-top: 1rem;
     padding-bottom: 5rem;
+}
+
+.form-content {
+    width: 100%;
 }
 
 #name,
